Sat Mar 13 01:38:55 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_remove): Add a remove 
	implemenatation which restores the cell_view when the custom 
	child is removed.  (#136555, Owen Taylor)

Sat Mar 13 00:07:51 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_cell_layout_clear): 
	Keep the cell_list in a consistent state while iterating over it, 
	since clear_attributes() also iterates over it.  (another instance
	of #136585, Morten Welinder)
	
Fri Mar 12 17:20:15 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkarrow.c (gtk_arrow_expose): Swap GTK_ARROW_LEFT
	and GTK_ARROW_RIGHT for GTK_TEXT_DIR_LTR. (#129159,
	Semion Chichelnitsky)

	* gtk/gtkpathbar.c gtk/gtktoolbar.c: Remove no-longer-needed 
	gtk_toolbar_direction-changed handlers and explicit
	flipping of GtkArrow widgets.

Fri Mar 12 23:37:15 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkfilechooserdialog.c
	(file_chooser_widget_default_realized_size_changed): Clamp the
	new size to the screen.

Fri Mar 12 15:06:44 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkexpander.c (gtk_expander_realize): Create the
	event_window at the right size using the same logic as
	in size_allocate. (#136994, Niklas Knuttson)

2004-03-12  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkwindow.c (gtk_window_activate_focus): Don't ignore the
	return value of gtk_widget_activate().
	(gtk_window_activate_default): Likewise.  Fixes #137008.

	* gtk/gtkfilechooserdialog.c (response_cb): Act on positive
	response IDs we recognize, rather than bailing out on cancellation
	ones.  Fixes #136237; patch by Olivier Andrieu
	<oliv__a@users.sourceforge.net>.
	(file_chooser_widget_file_activated): If the dialog doesn't have a
	default widget, try to find a suitable response widget on our own.
	People should *really* be using gtk_dialog_set_default_response(),
	but this is to help lazy programmers.
